Fix the overflow

--- a/style.css
+++ b/style.css
@@ -263,28 +263,30 @@ body.show-emoji-picker em-emoji-picker {
 
 @media (max-width: 540px) {
     body {
-        height: 100vh;
-        overflow: none;
-        width: 100vw;
+        background: none;
+        display: flex;
+        flex-direction: column;
     }
     .chat-body {
-        margin-top: 5em;
-        height: 90vh;
+        flex: 9;
         padding: 1.5em 0.4em;
         margin: 0;
-        min-width: 100vw;
+        width: 100%;
     }
     .chat-footer {
-       height: 10vh;
-       margin-bottom: 1em;
-       min-width: 100vw;
+       flex: 1;
+       width: 100%;
        margin: 0;
-       padding: 0.8em 0.5em 0 0.5em;
+       padding: 0;
        box-shadow: none;
        border-radius: 0;
+       display: flex;
+       align-items: center;
+       justify-content: center;
     }
+
     .chat-form {
-        width: 80%;
+     margin: 0;
     }
     .chat-message {
         max-width: 80%;
@@ -301,6 +303,6 @@ body.show-emoji-picker em-emoji-picker {
     }
 
     .chat-message {
-    max-width: 80%;
+       max-width: 80%;
    }
 }
